add xcconfig to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ Swift.gitignore
 
 ## User settings
 xcuserdata/
+*.xcconfig
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
